# See https://peps.python.org/pep-0621/

[project]
name = 'Website_update_checker' # No_spaces_allowed
readme = 'README.md'
version = '0.1.0'
description = 'Python template'
license = { file = 'LICENSE' }
keywords = ['Test']
authors = [
    { email = 'news1@vansteenwegen.org' },
    { name = 'Dieter Vansteenwegen' },
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
]
requires-python = ">3.5.2"
dynamic = ["dependencies"]

[project.urls]
Homepage = 'https://www.vansteenwegen.org'
Repository = 'https://github.com/dietervansteenwegen/Website_update_checker.git'
Changelog = 'https://github.com/dietervansteenwegen/website_update_checker/blob/master/CHANGELOG.md'

[project.scripts]
website_update_check = 'main:main'


[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ['src'] # list of folders that contain the packages (['.'] by default)
include = [
    # 'src',
] # package names should match these glob patterns (['*'] by default)
# exclude = ['my_package.tests*'] # exclude packages matching these glob patterns (empty by default)

[tool.bandit]
exclude_dirs = ["tests"]
# tests = ["B201", "B301"]
# skips = ["B101", "B601"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # Pycodestyle errors
    "E",
    # Pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # McCabe complex structure
    "C901",
    # PEP8 Naming
    "N",
    # Flake8-Bandit
    "S",
    # Flake8-builtins
    "A",
    # Flake8-commas
    "COM",
    # Flake8-datetimez
    "DTZ",
    # Flake8-errmsg
    "EM",
    # Flake8-use-pathlib
    "PTH",
    # tryceratops
    "TRY",
]

ignore = [
    # Use logging.exception instead of logging.error
    "TRY400",
    # Raising and catching exceptions in the same block may lead to confusion
    "TRY301",

]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
exclude = ["*.pyi"]
